Add tests from master and coverage for factory functions