@@ -4,8 +4,10 @@ import com.quorum.tessera.cli.CliResult;
 import com.quorum.tessera.cli.parsers.ConfigConverter;
 import com.quorum.tessera.config.CommunicationType;
 import com.quorum.tessera.config.Config;
+import com.quorum.tessera.config.ConfigFactory;
 import com.quorum.tessera.config.ServerConfig;
 import com.quorum.tessera.enclave.Enclave;
+import com.quorum.tessera.enclave.EnclaveServer;
 import com.quorum.tessera.enclave.server.EnclaveCliAdapter;
 import com.quorum.tessera.server.TesseraServer;
 import com.quorum.tessera.server.TesseraServerFactory;
@@ -13,8 +15,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import picocli.CommandLine;
 
-import java.util.Collections;
-import java.util.Objects;
+import java.util.Set;
 import java.util.concurrent.CountDownLatch;
 
 public class Main {
@@ -34,11 +35,7 @@ public class Main {
         commandLine.execute(args);
         final CliResult cliResult = commandLine.getExecutionResult();
 
-        if (Objects.isNull(cliResult)) {
-            System.exit(1);
-        }
-
-        if (cliResult.getConfig().isEmpty()) {
+        if (!cliResult.getConfig().isPresent()) {
             System.exit(cliResult.getStatus());
         }
 
@@ -46,18 +43,15 @@ public class Main {
 
         final Config config = cliResult.getConfig().get();
 
-        final Enclave enclave = Enclave.create();
-
-        final EnclaveResource enclaveResource = new EnclaveResource(enclave);
-
-        final EnclaveApplication application = new EnclaveApplication(enclaveResource);
+        ConfigFactory.create().store(config);
 
         final ServerConfig serverConfig = config.getServerConfigs()
                                                 .stream()
                                                 .findFirst()
                                                 .get();
-
-        final TesseraServer server = restServerFactory.createServer(serverConfig, Collections.singleton(application));
+        Enclave enclave = EnclaveServer.create();
+        LOGGER.debug("Created enclave {}",enclave);
+        final TesseraServer server = restServerFactory.createServer(serverConfig, Set.of(new EnclaveApplication(enclave)));
         server.start();
 
         CountDownLatch latch = new CountDownLatch(1);
